--- a/css/style.css
+++ b/css/style.css
@@ -1,248 +1,216 @@
-@import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oxygen&display=swap");
 
-body{
-    background: rgb(250, 250, 230);
-    margin: 5%;
-    font-family: 'oxygen', serif;
-    display: grid;
-    grid-template-columns: repeat(5, 20%);
+body {
+  background: rgb(250, 250, 230);
+  margin: 5%;
+  font-family: "oxygen", serif;
+  display: grid;
+  grid-template-columns: repeat(5, 20%);
 }
 
-header{
-    grid-column: 1/ span 5;
-    display: grid;
-    grid-template-columns: repeat(3, 3fr);
-    grid-row-gap: 10%;
-    align-items: center;
-    margin-bottom: 10%;
+header {
+  grid-column: 1 / span 5;
+  display: grid;
+  grid-template-columns: repeat(3, 3fr);
+  grid-row-gap: 10%;
+  align-items: center;
+  margin-bottom: 5%;
 }
 
-h1{
-    font-weight: 400;
-    font-size: 4em;
-    grid-column: span 2;
-    color: rgb(90, 120, 170);
-    text-shadow: 1px 1px 1px  #000000;
-    justify-self: left;
+h1 {
+  font-weight: 400;
+  font-size: 4em;
+  grid-column: span 2;
+  color: rgb(90, 120, 170);
+  text-shadow: 1px 1px 1px #000000;
+  justify-self: left;
 }
 
-#short{
-    display: none;
+#short {
+  display: none;
 }
 
-i.fa-chevron-circle-down{
-    color: rgb(90, 120, 170);
-    text-shadow: 1px 1px 1px  #000000;
-    font-size: 1.5em;
-    justify-self: right;
-    cursor: pointer;
-    transition: 0.5s;
-    grid-column: 3/ span 1;
+i.fa-chevron-circle-down {
+  color: rgb(90, 120, 170);
+  text-shadow: 1px 1px 1px #000000;
+  font-size: 1.5em;
+  justify-self: right;
+  cursor: pointer;
+  transition: 0.5s;
+  grid-column: 3 / span 1;
 }
 
-.icon{
-    transform: rotate(0.5turn);
-    transition: 0.5s;
+.icon {
+  transform: rotate(0.5turn);
+  transition: 0.5s;
 }
 
-nav{
-    display: grid;
-    grid-template-rows: repeat(3, auto);
-    grid-column: 2/ span 1;
-    justify-items: right;
-    font-size: 150%;
-    grid-column: 3/ span 1;
-    row-gap: 1.2em;
+nav {
+  display: grid;
+  grid-template-rows: repeat(3, auto);
+  grid-column: 2 / span 1;
+  justify-items: right;
+  font-size: 150%;
+  grid-column: 3 / span 1;
+  row-gap: 1.2em;
 }
 
-a{
-    text-decoration: none;
-    color: rgb(90, 120, 170);
+a {
+  text-decoration: none;
+  color: rgb(90, 120, 170);
 }
 
-a:hover, a:focus, a:active{
-    text-shadow: 1px 1px 1px  #000000;
+a:hover,
+a:focus,
+a:active {
+  text-shadow: 1px 1px 1px #000000;
 }
 
-.hide{
-    visibility: hidden;
+.hide {
+  visibility: hidden;
 }
 
-#img{
-    width: 60%;
-    min-width: 150px;
-    border-radius: 50%;
+#img {
+  width: 60%;
+  min-width: 150px;
+  border-radius: 50%;
+  justify-self: center;
+  grid-column: 2 / span 1;
+}
+
+main {
+  display: grid;
+  grid-template-columns: repeat(5, 20%);
+  grid-column: 1 / span 5;
+  grid-row-gap: 10%;
+  align-items: center;
+}
+
+#about {
+  display: grid;
+  grid-template-columns: repeat(3, 3fr);
+  grid-column: 1 / span 5;
+  text-align: justify;
+  color: rgb(90, 120, 170);
+  font-size: 1.2em;
+}
+
+#about h2 {
+  grid-column: 1 / span 3;
+}
+
+#about .para {
+  grid-column: 1 / span 2;
+  align-self: center;
+}
+
+#about .details {
+  justify-self: right;
+  align-self: center;
+}
+
+#projects {
+  display: grid;
+  grid-template-columns: repeat(3, 3fr);
+  grid-column: 1 / span 5;
+  text-align: justify;
+  color: rgb(90, 120, 170);
+  grid-gap: 2%;
+  font-size: 1.2em;
+}
+
+#projects h2 {
+  grid-column: 1 / span 3;
+}
+
+.projectcontainer {
+  position: relative;
+  grid-column: span 1;
+}
+
+.projectcontainer img {
+  opacity: 1;
+  width: 100%;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+
+#textcontainer {
+  width: 90%;
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.projectcontainer:hover img {
+  opacity: 0.3;
+}
+
+.projectcontainer:hover #textcontainer {
+  opacity: 1;
+}
+
+#textcontainer p {
+  color: rgb(90, 120, 170);
+  text-shadow: 0 0 1px #000;
+  font-size: 1em;
+  text-align: center;
+}
+
+#contact {
+  display: grid;
+  grid-template-columns: repeat(5, 5fr);
+  grid-column: 1 / span 5;
+  color: rgb(90, 120, 170);
+  font-size: 1.2em;
+}
+
+#contact a {
+  justify-self: right;
+  align-self: center;
+  font-size: 1.5em;
+}
+
+@media screen and (max-width: 360px) {
+  #img {
+    grid-column: 1 / span 1;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  #about .para {
+    grid-column: 1 / span 5;
+  }
+
+  #about .details {
+    grid-column: 1 / span 5;
     justify-self: center;
-    grid-column: 2/ span 1;
-}
+  }
 
-main{
-    display: grid;
-    grid-template-columns: repeat(5, 20%);
-    grid-column: 1/ span 5;
-    grid-row-gap: 10%;
-    align-items: center;
-}
+  #details {
+    grid-column: 1 / span 5;
+  }
 
-#about{
-    display: grid;
-    grid-template-columns: repeat(3, 3fr);
-    grid-column: 1/ span 5;
-    text-align: justify;
-    color: rgb(90, 120, 170);
-    font-size: 1.2em;
-}
+  main {
+    grid-row-gap: 0;
+  }
 
-#about h2{
-    grid-column: 1/span 3;
-}
+  #projects {
+    grid-gap: 0;
+  }
+  .projectcontainer {
+    grid-column: span 3;
+  }
 
-#about .para{
-    grid-column: 1/ span 2;
-}
+  #short {
+    display: inline;
+  }
 
-#about .details{
-    justify-self: right;
-}
-
-#projects{
-    display: grid;
-    grid-template-columns: repeat(3, 3fr);
-    grid-column: 1/ span 5;
-    text-align: justify;
-    color: rgb(90, 120, 170);
-    grid-gap: 2%;
-    font-size: 1.2em;
-}
-
-#projects h2{
-    grid-column: 1/span 3;
-}
-
-.projectcontainer{
-    position: relative;
-    grid-column: span 1;
-    
-}
-
-.projectcontainer img{
-    opacity: 1;
-    width: 100%;
-    transition: .5s ease;
-    backface-visibility: hidden;
-}
-  
-#textcontainer{
-    width: 90%;
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-}
-  
-.projectcontainer:hover img{
-    opacity: 0.3;
-}
-  
-.projectcontainer:hover #textcontainer{
-    opacity: 1;
-}
-  
-#textcontainer p{
-    color: rgb(90, 120, 170);
-    text-shadow: 0 0 1px #000;
-    font-size: 1em;
-    text-align: center;
-}
-
-#textcontainer i{
-      margin: 10% 10%;
-    text-shadow: 0 0 1px #000;
-    font-size: 2em;
-}
-
-#resume{
-    display: grid;
-    grid-template-columns: repeat(3, 3fr);
-    grid-column: 1/ span 5;
-    text-align: justify;
-    color: rgb(90, 120, 170);
-    font-size: 1.2em;
-}
-
-#resume h2{
-    grid-column: 1/span 2;
-}
-
-#resume h3{
-    justify-self: right;
-    align-self: center;
-    font-size: 1em;
-}
-
-#resume h4{
-    grid-column: 1/ span 1;
-    grid-row: span 3;
-}
-
-.duration{
-    justify-self: right;
-    text-align: right;
-}
-
-#contact{
-    display: grid;
-    grid-template-columns: repeat(5, 5fr);
-    grid-column: 1/ span 5;
-    color: rgb(90, 120, 170);
-    font-size: 1.2em;
-}
-
-#contact a{
-    justify-self: right;
-    align-self: center;
-    font-size: 1.5em;
-}
-
-@media screen and (max-width: 360px){
-    #img{
-        grid-column: 1/ span 1;
-    }
-}
-
-@media screen and (max-width: 700px){
-    #about .para{
-        grid-column: 1/span 5;
-    }
-
-    #about .details{
-        grid-column: 1/span 5;
-        justify-self: center;
-    }
-
-    #details{
-        grid-column: 1/ span 5;
-    }
-
-    main{
-        grid-row-gap: 0;
-    }
-
-    #projects{
-        grid-gap: 0;
-    }
-    .projectcontainer{
-        grid-column: span 3;
-    }
-
-    #short{
-        display: inline;
-    }
-
-    #long{
-        display: none;
-    }
+  #long {
+    display: none;
+  }
 }
